objects/ccrz__E_Product__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__PrimaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Attribute Group Associated with this Product. Will Determine what Attribute Values can be associated with the product.</description>
        <label>Primary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Products</relationshipLabel>
        <relationshipName>ccProductsPrim</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductId__c</fullName>
        <description>External product Id, tying this product to the source system. Typically contains the SKU/product id from a backend system such as SAP.</description>
        <externalId>true</externalId>
        <label>Product Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__ProductIndexStatus__c</fullName>
        <description>Indicates the status of the associated Product Index records. Possible values are Current, Not Current and Pending. This field is primarily used by the Product Index batch process.</description>
        <inlineHelpText>Indicates the status of the associated Product Index records. Possible values are Current, Not Current and Pending. This field is primarily used by the Product Index batch process.</inlineHelpText>
        <label>Product Index Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductStatus__c</fullName>
        <description>The status of the product. In Creation - Newly created product, that still requires augmentation and is not visible on the site; Blocked - product has been blocked from being displayed on the site; Not Orderable - product can be viewed, but cannot be added to a cart or ordered; Released - fully availble product</description>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Not Orderable</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>In Creation</fullName>
                    <default>true</default>
                    <label>In Creation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ProductType__c</fullName>
        <description>Type of product, which determines its behavior in the site. Product - standard product; Bundle - Product that groups multiple products together, with the pricing at the bundle level; Kit - Product that groups multiple products together, where the price is a rollup of the sub-products; Aggregated - Product that contains multiple options for ordering. The main product itself is a placeholder, such as a shirt, and the sub-products are the ordereable items (various shirt colors)</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>PlanOptions</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Aggregated</fullName>
                </value>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Configurable</fullName>
                </value>
                <value>
                    <fullName>Dynamic Kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ProductWeight__c</fullName>
        <description>Weight of the product - used as a shipping parameter</description>
        <label>Product Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantityperunit__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of items that come in one order-able unit</description>
        <label>Quantityperunit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RequiredItemDialogText__c</fullName>
        <description>The text to be displayed in the dialog that shows when a user adds this item to the cart if there are any required items for this product.</description>
        <inlineHelpText>The text to be displayed in the dialog that shows when a user adds this item to the cart if there are any required items for this product.</inlineHelpText>
        <label>Required Item Dialog Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__ReviewFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Review Flag</description>
        <label>Review Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__SEODescription__c</fullName>
        <description>Text used within meta tags on the product detail page to help drive search engine optimization</description>
        <label>SEO Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SEOId__c</fullName>
        <description>A shortened name for the product. This is used when constructing friendly URLs.</description>
        <externalId>true</externalId>
        <inlineHelpText>A shortened name for the product. This is used when constructing friendly URLs.</inlineHelpText>
        <label>SEO Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SEOKeywords__c</fullName>
        <description>Text used within meta tags on the product detail page to help drive search engine optimization</description>
        <label>SEO Keywords</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SEOTitle__c</fullName>
        <description>Text used within meta tags on the product detail page to help drive search engine optimization</description>
        <label>SEO Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SKU__c</fullName>
        <description>SKU/product number/product Id of the product. This is the unique identifier of the product, and is used as the primary reference point within B2B Commerce</description>
        <externalId>true</externalId>
        <label>SKU</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__SecondaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Attribute Group Associated with this Product. Will Determine what Attribute Values can be associated with the product.</description>
        <label>Secondary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Products (Secondary Attribute)</relationshipLabel>
        <relationshipName>ccProductsSec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ServiceFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service Flag</description>
        <label>Service Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipSeparately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this item must be shipped separately - not currently sued within the system</description>
        <label>Ship Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ShippedIndividually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for the products which should be shipped individually from other products from the same cart.</description>
        <label>Shipped Individually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ShippingWeight__c</fullName>
        <description>Overall shipping weight, including packaging, of the product - used as a shipping parameter</description>
        <inlineHelpText>This is required for CloudCraze to be able to show shipping options (Fedex) to the purchasing user.</inlineHelpText>
        <label>Shipping Weight(lbs)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDescRT__c</fullName>
        <description>Rich text field for the Short Description</description>
        <label>ShortDescRT</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDesc__c</fullName>
        <description>Product short description</description>
        <label>ShortDesc</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The first date that this product will be available.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>Mulit-select list that allows you to assign the product to one or more storefronts.</description>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
                <value>
                    <fullName>SoftwareStore</fullName>
                    <default>true</default>
                    <label>SoftwareStore</label>
                </value>
                <value>
                    <fullName>CSSNAStore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Disclaimer__c</fullName>
        <description>Hold the disclaimer of the subscription of this product.</description>
        <inlineHelpText>Hold the disclaimer of the subscription of this product.</inlineHelpText>
        <label>Subscription Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Duration__c</fullName>
        <description>Duration of the subscription of this product in months.  Acts as a static duration.  If the user is unable to select a duration on the cart / product detail page, then B2B Commerce uses this field to determine how long a subscription lasts.</description>
        <inlineHelpText>Duration of the subscription of this product in months.  Acts as a static duration.  If the user is unable to select a duration on the cart / product detail page, then CloudCraze uses this field to determine how long a subscription lasts.</inlineHelpText>
        <label>Subscription Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Frequency__c</fullName>
        <description>Determines the frequency of orders placed for any order items of this product in days.  (7 = Weekly, 14 = bi-weekly, 30 = monthly, 60 = bi-monthly, 365 = annually)</description>
        <inlineHelpText>Determines the frequency of orders placed for any order items of this product in days.  (7 = Weekly, 14 = bi-weekly, 30 = monthly, 60 = bi-monthly, 365 = annually)</inlineHelpText>
        <label>Subscription Frequency</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SupersedeProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product for which this product is superseding</description>
        <label>Supersede Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipName>E_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxRateId__c</fullName>
        <label>Tax Rate Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field determines if the product is taxable or not.</description>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__TertiaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tertiary Attribute Group Associated with this Product. Will Determine what Attribute Values can be associated with the product.</description>
        <label>Tertiary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Products (Tertiary Attribute)</relationshipLabel>
        <relationshipName>ccProductsTert</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__TotalRating__c</fullName>
        <description>Formula field - total rating for this product from the product reviews</description>
        <label>Total Rating</label>
        <summarizedField>ccrz__E_Review__c.ccrz__Rating__c</summarizedField>
        <summaryFilterItems>
            <field>ccrz__E_Review__c.ccrz__Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_Review__c.ccrz__Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__UnitOfMeasureLabel__c</fullName>
        <description>Label for the unit of measure of this product. This is used for tiered pricing displays as a possible parameter.</description>
        <inlineHelpText>Label for the unit of measure of this product. This is used for tiered pricing displays as a possible parameter.</inlineHelpText>
        <label>Unit Of Measure Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__UnitOfMeasure__c</fullName>
        <description>Product unit of measure - such as Each</description>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_Additional_Information__c</fullName>
        <label>dbu Additional Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>dbu_Available_to_ship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_shipOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_BMS_Instance__c</fullName>
        <label>dbu BMS Instance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Core_Charge_Amount__c</fullName>
        <label>dbu_Core Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dbu_Crate_Engine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used to differentiate a normal product from Crate Engine</description>
        <label>dbu Crate Engine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Distributor_Code__c</fullName>
        <label>dbu Distributor Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>03520</fullName>
                </value>
                <value>
                    <fullName>02466</fullName>
                </value>
                <value>
                    <fullName>04959</fullName>
                </value>
                <value>
                    <fullName>02680</fullName>
                </value>
                <value>
                    <fullName>02930</fullName>
                </value>
                <value>
                    <fullName>02475</fullName>
                </value>
                <value>
                    <fullName>02860</fullName>
                </value>
                <value>
                    <fullName>02850</fullName>
                </value>
                <value>
                    <fullName>56330</fullName>
                </value>
                <value>
                    <fullName>56270</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_Featured_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu Featured Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_FullPartNumber__c</fullName>
        <description>This field should be used to do real time inventory check in CSSNA</description>
        <label>dbu FullPartNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_GenuinePart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_GenuinePart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Has_Core_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_Has Core Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Has_Core_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_Has Core Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Image_Src__c</fullName>
        <label>dbu_Image Src</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>dbu_Inventory_Status_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked when at least one inventory is In Stock</description>
        <inlineHelpText>This is checked when at least one inventory is In Stock</inlineHelpText>
        <label>dbu Inventory Status Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Non_Returnable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_Non-Returnable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Part_Number__c</fullName>
        <label>dbu Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Pick_Up_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_Pick Up Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Product_Code__c</fullName>
        <description>This field will store the product code coming from BMS. Product code is highest in hierarchy.
Hierarchy=&gt;

Product Code=&gt; System Name=&gt; Category</description>
        <label>dbu Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Product_Comment__c</fullName>
        <label>dbu Product Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>dbu_Product_Status__c</fullName>
        <description>This will populate the Product status based on inevntories. If atleast one inventory is instock, product status is in stock, else it is out of stock.</description>
        <label>dbu Product Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_ReconEquivalentPartNumber__c</fullName>
        <label>dbu_ReconEquivalentPartNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Robots_Meta__c</fullName>
        <description>Checks for the Product status and update the field accordingly. User to hide and show pages in Google search engine</description>
        <formula>IF( 
OR
 (
  dbu_Has_Core_Child__c,
  AND(!ISPICKVAL(ccrz__ProductStatus__c , &apos;Released&apos;),!dbu_Has_Core_Child__c) 
 ),
 &apos;noindex,nofollow&apos;,&apos;index,follow&apos;)</formula>
        <label>Robots meta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Supersession_Number__c</fullName>
        <label>dbu_Supersession Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_UPC__c</fullName>
        <label>dbu UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_mostPopularParts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Most Popular Parts</description>
        <label>dbu_mostPopularParts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isIAMProvisioningRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIAMProvisioningRequired</label>
        <type>Checkbox</type>
    </fields>
    <label>CC Product</label>
    <listViews>
        <fullName>Custom_All_View</fullName>
        <columns>NAME</columns>
        <columns>ccrz__SKU__c</columns>
        <columns>QSOLType__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Custom All View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Custom_View_DA</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>ccrz__SKU__c</columns>
        <columns>QSOLType__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__SKU__c</field>
            <operation>equals</operation>
            <value>1012346-BUS,2-BUS,1301298-BUS,1-BUS,5678903-BUS,3-BUS</value>
        </filters>
        <filters>
            <field>ccrz__SKU__c</field>
            <operation>equals</operation>
            <value>3-DEF,5678901-DEF,1-DEF,1234567-DEF,2-DEF,2345678-DEF</value>
        </filters>
        <filters>
            <field>ccrz__SKU__c</field>
            <operation>equals</operation>
            <value>1012345-OHT,1357920-OHT,1-OHT,5678902-OHT,2-OHT,3-OHT</value>
        </filters>
        <filters>
            <field>ccrz__SKU__c</field>
            <operation>equals</operation>
            <value>98770,98768,98766,1-ANO,3-ANO,2-ANO</value>
        </filters>
        <label>Custom View_DA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SES_View</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ccrz__SKU__c</columns>
        <columns>QSOLType__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Name__c</field>
            <operation>equals</operation>
            <value>SES</value>
        </filters>
        <filters>
            <field>Group_Name__c</field>
            <operation>equals</operation>
            <value>DA</value>
        </filters>
        <filters>
            <field>Group_Name__c</field>
            <operation>contains</operation>
            <value>Fluid</value>
        </filters>
        <label>SES_View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__SKU__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ccrz__ProductType__c</columns>
        <columns>Product_Class_Code__c</columns>
        <columns>Group_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DBU_Product_Location__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__DefaultStore</fullName>
        <columns>NAME</columns>
        <columns>ccrz__ProductStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__Storefront__c</field>
            <operation>includes</operation>
            <value>DefaultStore</value>
        </filters>
        <label>DefaultStore</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Products</pluralLabel>
    <recordTypes>
        <fullName>ccrz__ProductType_Assembly</fullName>
        <active>true</active>
        <description>Product Type Assembly</description>
        <label>ProductType_Assembly</label>
    </recordTypes>
    <recordTypes>
        <fullName>ccrz__ProductType_Config</fullName>
        <active>true</active>
        <description>Product Type Configuration</description>
        <label>ProductType_Config</label>
    </recordTypes>
    <recordTypes>
        <fullName>ccrz__ProductType_Normal</fullName>
        <active>true</active>
        <description>Product Type Normal</description>
        <label>ProductType_Normal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>